// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VurderingPeriode > Snapshot testing > snapshot test - default state 1`] = `

<div>
  <form class="vurderingPeriode">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Lovvalgsbestemmelse og -periode
    </h1>
    <div class="row velgLovvalgsbestemmelse">
      <div class="col col-xs-7">
        <fieldset
          role="radiogroup"
          aria-labelledby="333"
          class="melosys-radiogroup  aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small"
        >
          <legend
            id="333"
            class="aksel-fieldset__legend aksel-label aksel-label--small"
          >
            Velg en lovvalgsbestemmelse
          </legend>
          <div class="aksel-radio-buttons">
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_3B"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(3)(b)
              </label>
            </div>
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_5"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(5)
              </label>
            </div>
          </div>
          <div
            id="333"
            aria-relevant="additions removals"
            aria-live="polite"
            class="aksel-fieldset__error"
          >
          </div>
        </fieldset>
      </div>
    </div>
    <p class="undertittel aksel-body-long aksel-body-long--small aksel-typo--semibold">
      Lovvalgsperiode
    </p>
    <div class="row lovvalgsperiode">
      <div class="col col-xs-6">
        01.01.2024 - 31.12.2024
      </div>
    </div>
    <div class="periodeForkorter">
      <div class="row forkortLovvalgsperiode">
        <div class="col col-xs-8">
          <div class="aksel-checkbox aksel-checkbox--medium">
            <div
              class="aksel-checkbox__input-wrapper"
              data-standalone="false"
            >
              <input
                id="333"
                class="aksel-checkbox__input"
                type="checkbox"
                value="true"
                checked
                name="333"
              >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                viewbox="0 0 13 10"
                fill="none"
                focusable="false"
                aria-hidden="true"
                class="aksel-checkbox__icon"
              >
                <path
                  d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                  fill="currentColor"
                >
                </path>
              </svg>
            </div>
            <label
              for="333"
              class="aksel-checkbox__label aksel-body-short aksel-body-short--medium"
            >
              Lovvalget innvilges for en kortere periode
            </label>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col col-xs-3">
          <div
            name="333"
            value="01.01.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Startdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="01.01.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="col col-xs-3">
          <div
            name="333"
            value="31.12.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Sluttdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="31.12.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small aksel-button--disabled"
        disabled
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small"
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </form>
</div>

`;

exports[`VurderingPeriode > Snapshot testing > snapshot test - med forkortet periode 1`] = `

<div>
  <form class="vurderingPeriode">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Lovvalgsbestemmelse og -periode
    </h1>
    <div class="row velgLovvalgsbestemmelse">
      <div class="col col-xs-7">
        <fieldset
          role="radiogroup"
          aria-labelledby="333"
          class="melosys-radiogroup  aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small"
        >
          <legend
            id="333"
            class="aksel-fieldset__legend aksel-label aksel-label--small"
          >
            Velg en lovvalgsbestemmelse
          </legend>
          <div class="aksel-radio-buttons">
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_3B"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(3)(b)
              </label>
            </div>
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_5"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(5)
              </label>
            </div>
          </div>
          <div
            id="333"
            aria-relevant="additions removals"
            aria-live="polite"
            class="aksel-fieldset__error"
          >
          </div>
        </fieldset>
      </div>
    </div>
    <p class="undertittel aksel-body-long aksel-body-long--small aksel-typo--semibold">
      Lovvalgsperiode
    </p>
    <div class="row lovvalgsperiode">
      <div class="col col-xs-6">
        01.03.2024 - 30.09.2024
      </div>
    </div>
    <div class="periodeForkorter">
      <div class="row forkortLovvalgsperiode">
        <div class="col col-xs-8">
          <div class="aksel-checkbox aksel-checkbox--medium">
            <div
              class="aksel-checkbox__input-wrapper"
              data-standalone="false"
            >
              <input
                id="333"
                class="aksel-checkbox__input"
                type="checkbox"
                value="true"
                checked
                name="333"
              >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                viewbox="0 0 13 10"
                fill="none"
                focusable="false"
                aria-hidden="true"
                class="aksel-checkbox__icon"
              >
                <path
                  d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                  fill="currentColor"
                >
                </path>
              </svg>
            </div>
            <label
              for="333"
              class="aksel-checkbox__label aksel-body-short aksel-body-short--medium"
            >
              Lovvalget innvilges for en kortere periode
            </label>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col col-xs-3">
          <div
            name="333"
            value="01.03.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Startdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="01.03.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="col col-xs-3">
          <div
            name="333"
            value="30.09.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Sluttdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="30.09.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small aksel-button--disabled"
        disabled
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small"
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </form>
</div>

`;

exports[`VurderingPeriode > Snapshot testing > snapshot test - med valgt lovvalgsbestemmelse 1`] = `

<div>
  <form class="vurderingPeriode">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Lovvalgsbestemmelse og -periode
    </h1>
    <div class="row velgLovvalgsbestemmelse">
      <div class="col col-xs-7">
        <fieldset
          role="radiogroup"
          aria-labelledby="333"
          class="melosys-radiogroup  aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small"
        >
          <legend
            id="333"
            class="aksel-fieldset__legend aksel-label aksel-label--small"
          >
            Velg en lovvalgsbestemmelse
          </legend>
          <div class="aksel-radio-buttons">
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_3B"
                checked
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(3)(b)
              </label>
            </div>
            <div class="aksel-radio aksel-radio--small">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_5"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(5)
              </label>
            </div>
          </div>
          <div
            id="333"
            aria-relevant="additions removals"
            aria-live="polite"
            class="aksel-fieldset__error"
          >
          </div>
        </fieldset>
      </div>
    </div>
    <p class="undertittel aksel-body-long aksel-body-long--small aksel-typo--semibold">
      Lovvalgsperiode
    </p>
    <div class="row lovvalgsperiode">
      <div class="col col-xs-6">
        01.01.2024 - 31.12.2024
      </div>
    </div>
    <div class="periodeForkorter">
      <div class="row forkortLovvalgsperiode">
        <div class="col col-xs-8">
          <div class="aksel-checkbox aksel-checkbox--medium">
            <div
              class="aksel-checkbox__input-wrapper"
              data-standalone="false"
            >
              <input
                id="333"
                class="aksel-checkbox__input"
                type="checkbox"
                value="true"
                checked
                name="333"
              >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                viewbox="0 0 13 10"
                fill="none"
                focusable="false"
                aria-hidden="true"
                class="aksel-checkbox__icon"
              >
                <path
                  d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                  fill="currentColor"
                >
                </path>
              </svg>
            </div>
            <label
              for="333"
              class="aksel-checkbox__label aksel-body-short aksel-body-short--medium"
            >
              Lovvalget innvilges for en kortere periode
            </label>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col col-xs-3">
          <div
            name="333"
            value="01.01.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Startdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="01.01.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="col col-xs-3">
          <div
            name="333"
            value="31.12.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    Sluttdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="31.12.2024"
                    >
                    <button
                      data-variant="secondary"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only"
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small aksel-button--disabled"
        disabled
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small"
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </form>
</div>

`;

exports[`VurderingPeriode > Snapshot testing > snapshot test - readonly mode 1`] = `

<div>
  <form class="vurderingPeriode">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Lovvalgsbestemmelse og -periode
    </h1>
    <div class="row velgLovvalgsbestemmelse">
      <div class="col col-xs-7">
        <fieldset
          role="radiogroup"
          aria-labelledby="333"
          class="melosys-radiogroup  aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small aksel-fieldset--readonly"
        >
          <legend
            id="333"
            class="aksel-fieldset__legend aksel-label aksel-label--small"
          >
            <svg
              xmlns="http://www.w3.org/2000/svg"
              width="1em"
              height="1em"
              fill="none"
              viewbox="0 0 24 24"
              focusable="false"
              role="img"
              aria-labelledby="333"
              class="aksel-form-field__readonly-icon"
            >
              <title id="333">
                Skrivebeskyttet
              </title>
              <path
                fill="currentColor"
                fill-rule="evenodd"
                d="M12 2.25A4.75 4.75 0 0 0 7.25 7v2.25H7A1.75 1.75 0 0 0 5.25 11v9c0 .414.336.75.75.75h12a.75.75 0 0 0 .75-.75v-9A1.75 1.75 0 0 0 17 9.25h-.25V7A4.75 4.75 0 0 0 12 2.25m3.25 7V7a3.25 3.25 0 0 0-6.5 0v2.25zM12 13a1.5 1.5 0 0 0-.75 2.8V17a.75.75 0 0 0 1.5 0v-1.2A1.5 1.5 0 0 0 12 13"
                clip-rule="evenodd"
              >
              </path>
            </svg>
            Velg en lovvalgsbestemmelse
          </legend>
          <div class="aksel-radio-buttons">
            <div class="aksel-radio aksel-radio--small aksel-radio--readonly">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_3B"
                checked
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(3)(b)
              </label>
            </div>
            <div class="aksel-radio aksel-radio--small aksel-radio--readonly">
              <input
                id="333"
                class="aksel-radio__input"
                data-standalone="false"
                type="radio"
                value="FO_883_2004_ART11_5"
                name="333"
              >
              <label
                for="333"
                class="aksel-radio__label aksel-body-short aksel-body-short--small"
              >
                Rfo. 883/2004 art.11(5)
              </label>
            </div>
          </div>
          <div
            id="333"
            aria-relevant="additions removals"
            aria-live="polite"
            class="aksel-fieldset__error"
          >
          </div>
        </fieldset>
      </div>
    </div>
    <div class="periodeForkorter">
      <div class="row forkortLovvalgsperiode">
        <div class="col col-xs-8">
          <div class="aksel-checkbox aksel-checkbox--medium aksel-checkbox--readonly">
            <div
              class="aksel-checkbox__input-wrapper"
              data-standalone="false"
            >
              <input
                id="333"
                class="aksel-checkbox__input"
                type="checkbox"
                value="true"
                checked
                name="333"
              >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                viewbox="0 0 13 10"
                fill="none"
                focusable="false"
                aria-hidden="true"
                class="aksel-checkbox__icon"
              >
                <path
                  d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                  fill="currentColor"
                >
                </path>
              </svg>
            </div>
            <label
              for="333"
              class="aksel-checkbox__label aksel-body-short aksel-body-short--medium"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-labelledby="333"
                class="aksel-form-field__readonly-icon"
              >
                <title id="333">
                  Skrivebeskyttet
                </title>
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M12 2.25A4.75 4.75 0 0 0 7.25 7v2.25H7A1.75 1.75 0 0 0 5.25 11v9c0 .414.336.75.75.75h12a.75.75 0 0 0 .75-.75v-9A1.75 1.75 0 0 0 17 9.25h-.25V7A4.75 4.75 0 0 0 12 2.25m3.25 7V7a3.25 3.25 0 0 0-6.5 0v2.25zM12 13a1.5 1.5 0 0 0-.75 2.8V17a.75.75 0 0 0 1.5 0v-1.2A1.5 1.5 0 0 0 12 13"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Lovvalget innvilges for en kortere periode
            </label>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="col col-xs-3">
          <div
            name="333"
            value="01.01.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field aksel-form-field--readonly aksel-text-field--readonly aksel-date__field--readonly">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                      class="aksel-form-field__readonly-icon"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.25A4.75 4.75 0 0 0 7.25 7v2.25H7A1.75 1.75 0 0 0 5.25 11v9c0 .414.336.75.75.75h12a.75.75 0 0 0 .75-.75v-9A1.75 1.75 0 0 0 17 9.25h-.25V7A4.75 4.75 0 0 0 12 2.25m3.25 7V7a3.25 3.25 0 0 0-6.5 0v2.25zM12 13a1.5 1.5 0 0 0-.75 2.8V17a.75.75 0 0 0 1.5 0v-1.2A1.5 1.5 0 0 0 12 13"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Startdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      readonly
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="01.01.2024"
                    >
                    <button
                      data-variant="secondary"
                      tabindex="-1"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only aksel-button--disabled"
                      disabled
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="col col-xs-3">
          <div
            name="333"
            value="31.12.2024"
          >
            <div class="datovelger">
              <div class="aksel-date__wrapper">
                <div class="datovelger__input input--fullbredde aksel-form-field aksel-form-field--small aksel-date__field aksel-form-field--readonly aksel-text-field--readonly aksel-date__field--readonly">
                  <label
                    for="333"
                    class="aksel-form-field__label aksel-label aksel-label--small"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                      class="aksel-form-field__readonly-icon"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.25A4.75 4.75 0 0 0 7.25 7v2.25H7A1.75 1.75 0 0 0 5.25 11v9c0 .414.336.75.75.75h12a.75.75 0 0 0 .75-.75v-9A1.75 1.75 0 0 0 17 9.25h-.25V7A4.75 4.75 0 0 0 12 2.25m3.25 7V7a3.25 3.25 0 0 0-6.5 0v2.25zM12 13a1.5 1.5 0 0 0-.75 2.8V17a.75.75 0 0 0 1.5 0v-1.2A1.5 1.5 0 0 0 12 13"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Sluttdato
                  </label>
                  <div class="aksel-date__field-wrapper">
                    <input
                      id="333"
                      readonly
                      autocomplete="off"
                      class="aksel-date__field-input aksel-text-field__input aksel-body-short aksel-body-short--small"
                      size="11"
                      value="31.12.2024"
                    >
                    <button
                      data-variant="secondary"
                      tabindex="-1"
                      type="button"
                      title="Åpne datovelger"
                      class="aksel-date__field-button aksel-button aksel-button--small aksel-button--icon-only aksel-button--disabled"
                      disabled
                    >
                      <span class="aksel-button__icon">
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          width="1em"
                          height="1em"
                          fill="none"
                          viewbox="0 0 24 24"
                          focusable="false"
                          role="img"
                          aria-hidden="true"
                        >
                          <path
                            fill="currentColor"
                            fill-rule="evenodd"
                            d="M9 2.25a.75.75 0 0 1 .75.75v1.25h4.5V3a.75.75 0 0 1 1.5 0v1.25h3.75c.69 0 1.25.56 1.25 1.25v13c0 .69-.56 1.25-1.25 1.25h-15c-.69 0-1.25-.56-1.25-1.25v-13c0-.69.56-1.25 1.25-1.25h3.75V3A.75.75 0 0 1 9 2.25M15.75 7a.75.75 0 0 1-1.5 0V5.75h-4.5V7a.75.75 0 0 1-1.5 0V5.75h-3.5v3.5h14.5v-3.5h-3.5zm-11 11.25v-7.5h14.5v7.5zm2-5.25a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4 0a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM10.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75m4.75-.75a.75.75 0 0 0 0 1.5h1a.75.75 0 0 0 0-1.5zM6.75 16a.75.75 0 0 1 .75-.75h1a.75.75 0 0 1 0 1.5h-1a.75.75 0 0 1-.75-.75"
                            clip-rule="evenodd"
                          >
                          </path>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="aksel-form-field__error"
                    id="333"
                    aria-relevant="additions removals"
                    aria-live="polite"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small aksel-button--disabled"
        disabled
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small aksel-button--disabled"
        disabled
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66683L2.47 7.66683L7.33333 12.6971L6.41697 13.6668L0 7.00016L6.41697 0.333496L7.33333 1.30319L2.47 6.3335L16 6.3335V7.66683Z"
              fill="white"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </form>
</div>

`;
